correction mobile size

--- a/css/style.css
+++ b/css/style.css
@@ -77,19 +77,23 @@ body {
   font-size: 1rem;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 992px) {
   body {
-    display: block;
-    margin: 30px auto 0 auto;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
   .profile {
-    margin: 0 auto;
-    width: 90%;
-    padding: 25px;
+    margin: 30px 0;
   }
   .attribution {
-    margin-top: 20px;
     position: static;
-    text-align: center;
+    padding-bottom: 10px;
+  }
+}
+@media (max-width: 450px) {
+  .profile {
+    width: 90%;
+    padding: 25px;
   }
 }/*# sourceMappingURL=style.css.map */
